infrastructure/controllers/pocket-id/app/pocket-id-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  annotations:
    gethomepage.dev/href: "https://pocket-id.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Pocket-id"
    gethomepage.dev/description: "Self-hosted OIDC server using passkeys"
    gethomepage.dev/app: pocket-id
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/pocket-id.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pocket-id.markmk.com`) 
      kind: Rule
      services:
        - name: pocket-id
          port: 1411
          namespace: pocket-id
